--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Lorem Ipsum<br />
+								(This is example text)</h2>
+								<p>Curabitur massa purus, faucibus a vulputate nec, tempus sit amet mi. Fusce lectus magna, volutpat sollicitudin augue sed, dictum molestie lacus.</p>
 							</header>
-							<ul class="icons major">
+							<!--<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
@@ -36,28 +35,28 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Vivamus eget arcu<br />
+								Sit amet</h2>
+								<p>Aenean fermentum magna hendrerit odio egestas iaculis. Integer venenatis ligula quis tincidunt ornare. Nam sed sagittis est. Fusce metus justo, interdum ac finibus at, sodales vel dolor. Suspendisse tortor nisl, dapibus luctus efficitur lobortis, mollis luctus augue. Duis pulvinar est dolor, at tempus mauris varius at. Mauris lacus ex, malesuada in arcu eget, vestibulum tempor lorem.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Cras vel nisl nibh<br />
+								Nulla</h2>
+								<p>Donec mollis molestie leo sed venenatis. Nulla vel ex eget augue suscipit malesuada a eu enim. Vestibulum eu semper mi. Etiam gravida mi a justo elementum, vitae egestas diam laoreet. Curabitur et arcu eu neque faucibus iaculis in at risus. Phasellus eget efficitur libero, et ultricies nunc. In hac habitasse platea dictumst.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Aliquam sollicitudin cursus<br />
+								Suspendisse purus ex</h2>
+								<p>Cras in diam ut lectus faucibus porta. Proin in tincidunt odio. Maecenas non velit augue. Quisque luctus velit ante, quis fermentum urna tristique mattis. Nulla pharetra nibh a elit lobortis, ac convallis ipsum lobortis. Aliquam in quam vehicula, interdum magna et, lacinia dolor. Vestibulum pretium enim sit amet dui ullamcorper, consequat feugiat diam tincidunt. Nam non hendrerit mi.</p>
 							</div>
 						</section>
 					</section>
 
-				<!-- Three -->
+				<!-- Three 
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -93,17 +92,18 @@ layout: landing
 							</ul>
 						</div>
 					</section>
+					-->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Pellentesque ullamcorper.</h2>
+								<p>Mauris maximus metus nec risus auctor, euismod elementum nisi auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet eget metus eu posuere.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">JOIN US</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="generic.html" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
