--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@ layout: landing
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>{{ site.title }}</h2>
-							<p>{{ site.description | markdownify }}</p>
-							<!--
+							<h2>{{ site.description | markdownify }}</h2>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="02-Dukung.html" class="button special">Dukung Kami</a></li>
 							</ul>
-							-->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
