--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@ layout: landing
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>{{ site.description | markdownify }}</h2>
+							<!--<h2>{{ site.description | markdownify }}</h2>-->
+							<h2>Yayasan Rumah Pengharapan Indonesia	</h2>
+							<header class="major">Anda dapat mengubah hidup anak-anak Indonesia. <br />
+							Setiap donasi yang Anda berikan dapat membantu mereka.</header>
 							<ul class="actions">
 								<li><a href="02-Dukung.html" class="button special">Dukung Kami</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Lebih Lanjut</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Lorem Ipsum<br />
-								(This is example text)</h2>
-								<p>Curabitur massa purus, faucibus a vulputate nec, tempus sit amet mi. Fusce lectus magna, volutpat sollicitudin augue sed, dictum molestie lacus.</p>
+								<h2>Alasan Donasi</h2>
+								<p>Informasi mengenai yayasan.</p>
 							</header>
 							<!--<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -32,22 +34,19 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Vivamus eget arcu<br />
-								Sit amet</h2>
+								<h2>Kegiatan Yayasan</h2>
 								<p>Aenean fermentum magna hendrerit odio egestas iaculis. Integer venenatis ligula quis tincidunt ornare. Nam sed sagittis est. Fusce metus justo, interdum ac finibus at, sodales vel dolor. Suspendisse tortor nisl, dapibus luctus efficitur lobortis, mollis luctus augue. Duis pulvinar est dolor, at tempus mauris varius at. Mauris lacus ex, malesuada in arcu eget, vestibulum tempor lorem.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Cras vel nisl nibh<br />
-								Nulla</h2>
+								<h2>Prestasi Yayasan</h2>
 								<p>Donec mollis molestie leo sed venenatis. Nulla vel ex eget augue suscipit malesuada a eu enim. Vestibulum eu semper mi. Etiam gravida mi a justo elementum, vitae egestas diam laoreet. Curabitur et arcu eu neque faucibus iaculis in at risus. Phasellus eget efficitur libero, et ultricies nunc. In hac habitasse platea dictumst.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Aliquam sollicitudin cursus<br />
-								Suspendisse purus ex</h2>
+								<h2>Informasi Lebih Lanjut</h2>
 								<p>Cras in diam ut lectus faucibus porta. Proin in tincidunt odio. Maecenas non velit augue. Quisque luctus velit ante, quis fermentum urna tristique mattis. Nulla pharetra nibh a elit lobortis, ac convallis ipsum lobortis. Aliquam in quam vehicula, interdum magna et, lacinia dolor. Vestibulum pretium enim sit amet dui ullamcorper, consequat feugiat diam tincidunt. Nam non hendrerit mi.</p>
 							</div>
 						</section>
@@ -95,12 +94,12 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Pellentesque ullamcorper.</h2>
+								<h2>Ajakan Donasi.</h2>
 								<p>Mauris maximus metus nec risus auctor, euismod elementum nisi auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet eget metus eu posuere.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">JOIN US</a></li>
-								<li><a href="generic.html" class="button fit">Learn More</a></li>
+								<li><a href="02-dukung.html" class="button fit special">Dukung Kami</a></li>
+								<li><a href="02-dukung.html" class="button fit">Lebih lanjut</a></li>
 							</ul>
 						</div>
 					</section>
