--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ layout: landing
 								<p>Mauris maximus metus nec risus auctor, euismod elementum nisi auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet eget metus eu posuere.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="02-dukung.html" class="button fit special">Dukung Kami</a></li>
-								<li><a href="02-dukung.html" class="button fit">Lebih lanjut</a></li>
+								<li><a href="02-Dukung.html" class="button fit special">Dukung Kami</a></li>
+								<li><a href="02-Dukung.html" class="button fit">Lebih lanjut</a></li>
 							</ul>
 						</div>
 					</section>
